# ThaunOS

./: .gitignore  CMAKE  Makefile  README.md  boot.asm  kernel.c  limine.conf  linker.ld
.github/workflows/: build.yml
kernel/: .gitignore  Cargo.toml  Cross.toml  GNUMakefile-x86_64  Makefile
kernel/arch/i386/: boot.asm  crti.asm  crtn.asm  make.config
kernel/arch/i386/tty/: Cargo.toml
kernel/arch/i386/tty/src/: lib.rs
kernel/arch/i386/vga/: Cargo.toml  vga.h
kernel/arch/i386/vga/src/: lib.rs
kernel/arch/x86_64/: make.config
kernel/arch/x86_64/limine/: build.rs
kernel/arch/x86_64/limine/src/: bindings.rs  keyboard.rs  lib.rs  pic.rs  port.rs
kernel/arch/x86_64/tty/: Cargo.toml  build.rs
kernel/arch/x86_64/tty/src/: font.rs  lib.rs
kernel/arch/x86_64/vga/: Cargo.toml  build.rs
kernel/kernel/: Cargo.toml  build.rs  kernel.h
kernel/kernel/src/: lib.rs
kernel/src/: lib.rs
librust/: Cargo.toml  Makefile  build.rs  librust.h
librust/src/: lib.rs
librust/src/stdio/: mod.rs  printf.rs  putchar.rs  puts.rs
librust/src/stdlib/: abort.rs  mod.rs
librust/src/string/: memcmp.rs  memcpy.rs  memmove.rs  memset.rs  mod.rs  strlen.rs  tostring.rs
