[package]
name = "librust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
tty-x86_64 = { path = "../kernel/arch/x86_64/tty", version = "0.1.0" }

[target.i686-unknown-linux-gnu.dependencies]
tty-i386 = { path = "../kernel/arch/i386/tty", version = "0.1.0" }

[target.x86_64-unknown-linux-gnu.dependencies]
tty-x86_64 = { path = "../kernel/arch/x86_64/tty", version = "0.1.0" }


[build-dependencies]
cbindgen = "0.29.2"


[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 2